// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders the input 1`] = `
<input
  className="input"
  onChange={[Function]}
  type="text"
  value=""
/>
`;

exports[`Input renders the input as password 1`] = `
<input
  className="input"
  onChange={[Function]}
  type="password"
  value=""
/>
`;

exports[`Input renders the lined input 1`] = `
<input
  className="input input--lined"
  onChange={[Function]}
  type="text"
  value=""
/>
`;
